test/mutation_analysis/s0044_wildcard_matching/hafis/starchat/mutants/2/result.txt
./test/mutation_analysis/s0044_wildcard_matching/hafis/starchat/mutants/2/Solution.java:26: error: unreachable statement
        while (false) {
                      ^
1 error
